5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1771_1576.log
== TEST (2019-05-23 20:05:51) 
-- CODE:
vetor0 = array(eval(input("Vetor0: ")))
vetor1 = array(eval(input("Vetor1: ")))
i=0
e=0
a=0
while(i<vetor0 and i<vetor1):
	i=i+1
	if(vetor0>vetor1):
	mensagem="EUSAPIA"
	print(mensagem)
		elif(vetor0<vetor1):
		mensagem="BERSANULFO"
		print(mensagem)
			else:
			mensagem="EMPATE"
			print(mensagem)
print(size(vetor1+vetor0))
	
-- ERROR:
File "XXXX", line 9
    mensagem="EUSAPIA"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:06:26) 
-- CODE:
vetor0 = array(eval(input("Vetor0: ")))
vetor1 = array(eval(input("Vetor1: ")))
i=0
e=0
a=0
while(i<vetor0 and i<vetor1):
	i=i+1
	if(vetor0>vetor1):
		mensagem="EUSAPIA"
	print(mensagem)
		elif(vetor0<vetor1):
			mensagem="BERSANULFO"
		print(mensagem)
			else:
				mensagem="EMPATE"
			print(mensagem)
print(size(vetor1+vetor0))
	
-- ERROR:
File "XXXX", line 11
    elif(vetor0<vetor1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:06:53) 
-- CODE:
vetor0 = array(eval(input("Vetor0: ")))
vetor1 = array(eval(input("Vetor1: ")))
i=0
e=0
a=0
while(i<vetor0 and i<vetor1):
	i=i+1
	if(vetor0>vetor1):
		mensagem="EUSAPIA"
	print(mensagem)
	elif(vetor0<vetor1):
		mensagem="BERSANULFO"
	print(mensagem)
			else:
				mensagem="EMPATE"
			print(mensagem)
print(size(vetor1+vetor0))
	
-- ERROR:
File "XXXX", line 11
    elif(vetor0<vetor1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:07:49) 
-- CODE:
vetor0 = array(eval(input("Vetor0: ")))
vetor1 = array(eval(input("Vetor1: ")))
i=0
e=0
a=0
while(i<vetor0 and i<vetor1):
	i=i+1
	if(vetor0>vetor1):
		mensagem="EUSAPIA"
	print(mensagem)
elif(vetor0<vetor1):
	mensagem="BERSANULFO"
print(mensagem)
else:
	mensagem="EMPATE"
print(mensagem)
print(size(vetor1+vetor0))
	
-- ERROR:
File "XXXX", line 11
    elif(vetor0<vetor1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:11:46) 
-- CODE:
vetor0 = array(eval(input("Vetor0: ")))
vetor1 = array(eval(input("Vetor1: ")))
i=0
e=0
a=0
while(i<len(vetor0 and vetor1)):
	i=i+1
	if(vetor0[i]<vetor1):
		mensagem="EUSAPIA"
	print(mensagem)
elif(vetor0[i]>vetor1):
	mensagem="BERSANULFO"
print(mensagem)
else:
	mensagem="EMPATE"
print(mensagem)
print(size(vetor1+vetor0))
	
-- ERROR:
File "XXXX", line 11
    elif(vetor0[i]>vetor1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:12:12) 
-- CODE:
vetor0 = array(eval(input("Vetor0: ")))
vetor1 = array(eval(input("Vetor1: ")))
i=0
e=0
a=0
while(i<len(vetor0 and vetor1)):
	i=i+1
	if(vetor0[i]<vetor1):
		mensagem="EUSAPIA"
	print(mensagem)
	elif(vetor0[i]>vetor1):
		mensagem="BERSANULFO"
	print(mensagem)
	else:
		mensagem="EMPATE"
	print(mensagem)
print(size(vetor1+vetor0))
	
-- ERROR:
File "XXXX", line 11
    elif(vetor0[i]>vetor1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:14:42) 
-- CODE:
from numpy import*
vetor0 = array(eval(input("Vetor0: ")))
vetor1 = array(eval(input("Vetor1: ")))
i=0
e=0
a=0
while(i<len(vetor0 and vetor1)):
	i=i+1
	if(vetor0[i]<vetor1):
		mensagem="EUSAPIA"
	print(mensagem)
	elif(vetor0[i]>vetor1):
		mensagem="BERSANULFO"
	print(mensagem)
	else:
		mensagem="EMPATE"
	print(mensagem)
print(size(vetor1+vetor0))
	
-- ERROR:
File "XXXX", line 12
    elif(vetor0[i]>vetor1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:14:52) 
-- CODE:
from numpy import*
vetor0 = array(eval(input("Vetor0: ")))
vetor1 = array(eval(input("Vetor1: ")))
i=0
e=0
a=0
while(i<len(vetor0 and vetor1)):
	i=i+1
	if(vetor0[i]<vetor1):
		mensagem="EUSAPIA"
	print(mensagem)
	elif(vetor0[i]>vetor1):
		mensagem="BERSANULFO"
	print(mensagem)
	else:
		mensagem="EMPATE"
	print(mensagem)
print(size(vetor1+vetor0))
	
-- ERROR:
File "XXXX", line 12
    elif(vetor0[i]>vetor1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:22:12) 
-- CODE:
from numpy import*
vetor0 = array(eval(input("Vetor0: ")))
vetor1 = array(eval(input("Vetor1: ")))
i=0
e=0
a=0
while((i < size(vetor0) and vetor0[i] != vetor1):
	i = i + 1
	if(vetor0 < size(vetor1)):
		mensagem="EUSAPIA"
	print(mensagem)
	elif(vetor0 > size(vetor1)):
		mensagem="BERSANULFO"
	print(mensagem)
	else:
		mensagem="EMPATE"
	print(mensagem)
print(size(vetor1+vetor0))
	
-- ERROR:
File "XXXX", line 7
    while((i < size(vetor0) and vetor0[i] != vetor1):
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:22:24) 
-- CODE:
from numpy import*
vetor0 = array(eval(input("Vetor0: ")))
vetor1 = array(eval(input("Vetor1: ")))
i=0
e=0
a=0
while((i < size(vetor0) and vetor0[i] != vetor1):
	i = i + 1
	if(vetor0 < size(vetor1)):
		mensagem="EUSAPIA"
	print(mensagem)
	elif(vetor0 > size(vetor1)):
		mensagem="BERSANULFO"
	print(mensagem)
	else:
		mensagem="EMPATE"
	print(mensagem)
print(size(vetor1+vetor0))
	
-- ERROR:
File "XXXX", line 7
    while((i < size(vetor0) and vetor0[i] != vetor1):
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:23:36) 
-- CODE:
from numpy import*
vetor0 = array(eval(input("Vetor0: ")))
vetor1 = array(eval(input("Vetor1: ")))
i=0
e=0
a=0
while(i < size(vetor0) and vetor0!= vetor1):
	i = i + 1
	if(vetor0 < size(vetor1)):
		mensagem="EUSAPIA"
	print(mensagem)
	elif(vetor0 > size(vetor1)):
		mensagem="BERSANULFO"
	print(mensagem)
	else:
		mensagem="EMPATE"
	print(mensagem)
print(size(vetor1+vetor0))
	
-- ERROR:
File "XXXX", line 12
    elif(vetor0 > size(vetor1)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:23:47) 
-- CODE:
from numpy import*
vetor0 = array(eval(input("Vetor0: ")))
vetor1 = array(eval(input("Vetor1: ")))
i=0
e=0
a=0
while(i < size(vetor0) and vetor0!= vetor1):
	i = i + 1
	if(vetor0 < size(vetor1)):
		mensagem="EUSAPIA"
	print(mensagem)
	elif(vetor0 > size(vetor1)):
		mensagem="BERSANULFO"
	print(mensagem)
	else:
		mensagem="EMPATE"
	print(mensagem)
print(size(vetor1+vetor0))
	
-- ERROR:
File "XXXX", line 12
    elif(vetor0 > size(vetor1)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:27:13) 
-- CODE:
from numpy import*
vetor0 = array(eval(input("Vetor0: ")))
vetor1 = array(eval(input("Vetor1: ")))
i=0
e=0
a=0
while(i < size(vetor0) and vetor0!= vetor1):
	i = i + 1
	if(size(vetor0) < size(vetor1)):
		mensagem="EUSAPIA"
	print(mensagem)
	elif(size(vetor0) > size(vetor1)):
		mensagem="BERSANULFO"
	print(mensagem)
	else:
		mensagem="EMPATE"
	print(mensagem)
print(size(vetor1+vetor0))
	
-- ERROR:
File "XXXX", line 12
    elif(size(vetor0) > size(vetor1)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:28:10) 
-- CODE:
from numpy import*
vetor0 = array(eval(input("Vetor0: ")))
vetor1 = array(eval(input("Vetor1: ")))
i=0
e=0
a=0
while(i < size(vetor0) and vetor0!= vetor1):
	i = i + 1
if(size(vetor0) < size(vetor1)):
	mensagem="EUSAPIA"
print(mensagem)
elif(size(vetor0) > size(vetor1)):
	mensagem="BERSANULFO"
print(mensagem)
else:
	mensagem="EMPATE"
print(mensagem)
print(size(vetor1+vetor0))
	
-- ERROR:
File "XXXX", line 12
    elif(size(vetor0) > size(vetor1)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
